# djangorest-routes

./: .coverage  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  TEST_NOTE.md  db.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
auth/: serializers.py  utils.py  views.py
djangorest_auth/: README.rst  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
djangorest_auth/config/: base.py  local.py  production.py
djangorest_auth/djangorest_auth/: asgi.py  settings.py  urls.py  wsgi.py
djangorest_routes/: urls.py  wsgi.py
djangorest_routes/config/: base.py  local.py  production.py
djangorest_routes/rest_auth/: managers.py  otp_verifications.py
rest_auth/: apps.py  managers.py  models.py  otp_verifications.py  serializers.py  urls.py  utils.py  views.py
rest_auth/migrations/: 0001_initial.py  0002_user_otp_code.py  0003_alter_user_is_active.py  0004_user_username.py
rest_auth/tests/: test_managers.py  test_views.py
rest_routes/: admin.py  apps.py  managers.py  models.py  otp_verifications.py  permissions.py  serializers.py  urls.py  views.py
rest_routes/migrations/: 0001_initial.py  0002_user_is_staff_alter_user_is_superuser.py  0003_alter_user_options.py  0004_alter_user_phone_number.py  0005_alter_user_firstname_alter_user_lastname_and_more.py  0006_alter_user_is_active.py
rest_routes/tests/: test_managers.py  test_models.py  (+1 more)
(+12 files in other folders)
