[metadata]
name = djangorest_auth_as_service
version = 1.1
description = ðŸ” Authentication routes as a service.
long_description = file:README.md
url = https://github.com/israelabraham/djangorest-auth-as-a-service
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE.txt
description-file = README.md

[options]
include_package_data = true
python_requires = >=3.6
packages = find:
install_requires =
    Django>=2.2

[pycodestyle]
ignore = E402,E722
max-line-length = 120
exclude = *migrations*, *tests*, *settings*